@@ -2,6 +2,8 @@ import { DocumentIcon } from "@heroicons/react/24/outline";
 import React from "react";
 
 export type CheckboxProps = {
+  checked?: boolean;
+  checkboxPosition?: "left" | "right";
   className?: string;
   description?: string;
   disabled?: boolean;
@@ -12,12 +14,14 @@ export type CheckboxProps = {
 };
 
 export const Checkbox: React.FC<CheckboxProps> = ({
+  checked,
+  checkboxPosition = "right",
   className,
-  description = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus.",
+  description,
   disabled = false,
   icon,
   showIcon = false,
-  title = "Title",
+  title,
   variant = "default",
 }) => {
   const variantStyles = {
@@ -29,35 +33,45 @@ export const Checkbox: React.FC<CheckboxProps> = ({
 
   const baseStyles = "w-5 h-5 accent-purple-700 bg-gray-100 rounded-sm";
   const disabledStyles = "cursor-not-allowed";
-  const baseStylesBorder = "border-2";
 
   return (
-    <div className={`${baseStylesBorder} flex items-center space-x-3 p-4 rounded-lg`}>
-      <div className="bg-slate-200 p-2 rounded-full">
-        <DocumentIcon className="w-2 h-2 text-purple-600" />
+    <div
+    className={` ${variantStyles[variant]} ${className} flex gap-x-1.5 p-4 rounded-xl`}
+  >
+    {checkboxPosition === "left" && (
+      <input
+        checked={checked}
+        disabled={disabled}
+        type="checkbox"
+        className={`${baseStyles} ${disabled ? disabledStyles : ""}`}
+      />
+    )}
+
+    <div className="flex items-center">
+    {showIcon && icon && (
+      <div className="bg-[#EDE7F6] p-2 rounded-full">
+        <span>{icon}</span>
       </div>
-      <div className="flex flex-col w-full">
-        <div className="flex items-center text-sm">
-          <label
-            htmlFor="helper-checkbox"
-            className="font-medium text-gray-900 dark:text-gray-300"
-          >
-            {title}
-          </label>
-          <div className="ms-auto">
-            <input
-              disabled={disabled}
-              type="checkbox"
-              className={`${baseStyles}
-            ${disabled ? disabledStyles : ""}
-            ${className}`}
-            />
-          </div>
-        </div>
-        <p className="text-xs font-normal text-gray-500 dark:text-gray-300">
-          {description}
-        </p>
-      </div>
+    )}
     </div>
+
+    <div className="flex flex-col w-full">
+      <div className="flex text-sm">
+        <label htmlFor="helper-checkbox" className="font-medium">
+          {title}
+        </label>
+      </div>
+      <p className="text-xs font-normal text-[#828282]">{description}</p>
+    </div>
+
+    {checkboxPosition === "right" && (
+      <input
+        checked={checked}
+        disabled={disabled}
+        type="checkbox"
+        className={`${baseStyles} ${disabled ? disabledStyles : ""}`}
+      />
+    )}
+  </div>
   );
 };
